--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -69,6 +69,8 @@ html
             {% empty %}
             p 快去建立連結吧
             {% endfor %}
+            .vitualimg
+            .vitualimg
           hr#divider1.lefthr
           p 個性
           #personality.left-region
@@ -143,7 +145,7 @@ html
               
                 #activity-comment.comments
                   {% for comment in activity.comments.all %}
-                  .activity-comment
+                  .comment
                     {% load static %}
                     a(href="{% url 'profile' id=comment.author.pk %}")
                       img#participant-img(src="{{ comment.author.img.url }}")
@@ -153,9 +155,10 @@ html
                       p#participant-comment {{ comment.text }}
                       p#participant-rate {{ comment.rate }}★
                   {% empty %}
-                  .activity-comment
+                  .comment
                     .comment-right
-                      p 這個活動好像還沒有評論
+                      #participant-comment
+                        p 這個活動好像還沒有評論
                   {% endfor %}
 
             {% empty %}
@@ -184,29 +187,35 @@ html
                 {% else %}
                 p.date 未設定日期
                 {% endif %}
-
+                
               .cardright
                 .info
                   a(href="{% url 'profile_event' id=user.pk event_id=project.pk%}")
                     p#project-title.cardinfott {{ project.title }}
-                  {% if project.comments.count > 0 %}
-                  p#projects-rate {{ project.get_avg_rating }}★
+                  {% if projects.comments.count > 0 %}
+                  p#projects-rate.rate {{ project.get_avg_rating }}★
                   {% endif %}
-                  p#activity-character.charname 主辦人
-
+                  p#projects-character.charname 主辦人
+              
                 #projects-comment.comments
                   {% for comment in project.comments.all %}
-                  .activity-comment
-                    img#projects-participant-img(src="{{ commennt.author.img.url }}")
+                  .comment
+                    {% load static %}
+                    a(href="{% url 'profile' id=comment.author.pk %}")
+                      img#participant-img(src="{{ comment.author.img.url }}")
                     .comment-right
-                      p#projects-participant-name {{ comment.author.full_name }}
-                      p#projects-participant-comment {{ comment.text }}
-                      p#projects-participatn-rate {{ comment.rate }}
+                      a(href="{% url 'profile' id=comment.author.pk %}") {{ comment.author.full_name }}
+                        //p#participant-name {{ comment.author.full_name }}
+                      p#participant-comment {{ comment.text }}
+                      p#participant-rate {{ comment.rate }}★
                   {% empty %}
-                  .activity-comment
+                  .comment
                     .comment-right
-                      p 這個活動好像還沒有評論
+                      #participant-comment
+                        p 這個活動好像還沒有評論
                   {% endfor %}
+                  
+              
 
             {% empty %}
             #activity-card.card
