modify database, homepage.sass, .js, profile.sass

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -107,12 +107,12 @@ a
       flex-direction: row
       justify-content: space-between
       align-items: center
-      margin: 1vw
+      margin: 1.5vw 1vw 0.5vw 1vw
       background-color: rgba(255, 219, 208, 1)
       
       p
         margin-right: 0
-        font-size: 1.5vw
+        font-size: 1.2vw
       
       .line
         background-color: rgba(255, 219, 208, 1)
@@ -126,12 +126,12 @@ a
         width: 7.5%
         
       #category
-        width: 6.5vw
+        width: 6.3vw
       #sort
-        width: 11vw
+        width: 10.3vw
         
       select
-        font-size: 1.5vw
+        font-size: 1.2vw
         border-radius: 1vw
         padding: 0.2vw 0.7vw
         outline: none
@@ -178,6 +178,7 @@ a
           background-color: #FFAD94
           min-height: 5.5vw
           
+          
           #postimgs
             height: 2.5vw
             width: 2.5vw
@@ -194,14 +195,16 @@ a
             white-space: nowrap
             text-overflow: ellipsis
             margin-bottom: 0.3vw
+            
           #post_subtitle
-            font-size: 0.85vw
-            width: 13.5vw
+            font-size: 0.95vw
+            width: 10vw
             overflow: hidden
             white-space: nowrap
             text-overflow: ellipsis
             font-weight: 100
             margin-bottom: 0.3vw
+            
           #postcreatdate
             font-size: 0.8vw
             color: #777777
@@ -242,7 +245,8 @@ a
           background: none
           
       
-#gotop 
+#gotop
+  display: none
   position: fixed
   border-radius: 50%
   right: 20px
@@ -257,7 +261,7 @@ a
   text-align: center
   p
     position: relative
-    top: 30%
+    //top: 30%
     color: #666666
 
 #gotop:hover
