--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -392,6 +392,8 @@ a
           align-content: flex-start
           justify-content: flex-start
           align-items: flex-start
+          //background-image: linear-gradient(#EEEEEE, #FFFFFF)
+          //border-radius: 1.5vw
           width: 100%
           height: 15vw
           overflow: scroll
@@ -442,6 +444,7 @@ a
               #participant-comment
                 font-size: 1vw
                 text-align: left
+                width: 12vw
                 margin: 0.1vw 1.2vw 0 1vw
                 color: #333333
 
