add logout btn in profile

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -76,6 +76,10 @@ a
     margin-right: 10%
 
   li
+    a:hover
+      position: relative
+      transform: scale(1.1)
+  li
     display: block
     float: right
     width: 1.5vw
