--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -141,7 +141,6 @@ a
         #buttons
           *
             width: auto
-          input
             font-size: 1vw
             border-radius: 2vw
             padding: 0.5vw 1vw
@@ -150,7 +149,7 @@ a
             border: solid 2px
             background-color: #FDF2EF
             border-color: var(--color-main)
-          input:hover
+          *:hover
             background-color: #FFDFDF
             
           input:nth-child(1)
