--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -56,8 +56,14 @@ html
               {% endfor %}
 
             #buttons
+              
+              {% if request.user.is_authenticated %}
+              a(href="/logout/") 登出
+              {% else %}
               input(type="button", value="建立連結")
               input(type="button", value="傳訊息")
+              {% endif %}
+              
       #bottom-region
         #left-pane
           #title-count
