fix logout at others page problem

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -297,6 +297,7 @@ a
   
   p
     font-size: 1vw
+
   
   #description
     position: absolute
@@ -448,13 +449,15 @@ a
         color: black
         width: 5vw
     
-    a#login-redirect
+    a.login-redirect
       width: 6vw
       height: 3vw
       transform: translate(-50%, -50%)
       top: 95%
       display: flex
       flex-direction: row
+
+      
     #likebutton
       left: 1vw
       bottom: 1vw
