--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -56,14 +56,15 @@
     #applybutton
       img#apply-y(src="{% static 'file/applyicon.png' %}")
     {% else %}
-    #likebutton(style="background-image: url('/static/file/like-n.png')", href="{% url 'login' %}")
-      form(action="", method="POST")
-        {% csrf_token %}
-        button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
-          span#like-img
-
-    #applybutton
-      img#apply-y(src="{% static 'file/applyicon.png' %}")
+    a.login-redirect(href="{% url 'login' %}")
+      #likebutton(style="background-image: url('/static/file/like-n.png')", href="{% url 'login' %}")
+        form(action="", method="POST")
+          {% csrf_token %}
+          button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+            span#like-img
+    a.login-redirect(href="{% url 'login' %}")
+      #applybutton
+        img#apply-y(src="{% static 'file/applyicon.png' %}")
     {% endif %}
 
   {% if request.user.is_authenticated %}
