--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -450,12 +450,14 @@ a
         width: 5vw
     
     a.login-redirect
-      width: 6vw
-      height: 3vw
-      transform: translate(-50%, -50%)
-      top: 95%
+      width: 100%
+      height: 15%
+      transform: translate(-50%, 0)
+      bottom: 0
+      left: 50%
       display: flex
       flex-direction: row
+      z-index: 1
 
       
     #likebutton
