modify navbar, href homepage userpic, change profile btn

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -61,12 +61,19 @@ a
     margin-bottom: 15px
     padding: 1vw 0
     
+    a
+      //position: relative
+      width: 6vw
+      height: 6vw
+      border-radius: 50%
+    
     #userpic
+      //position: absolute
       margin-left: 2%
       margin-right: 2%
-      width: 5vw
-      height: 5vw
-      border-radius: 2.5vw
+      width: 6vw
+      height: 6vw
+      border-radius: 50%
       background-color: rgba(205, 205, 205, 1)
 
     #inserta
