--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -231,7 +231,8 @@ body
       transform: translate(0, -50%)
       top: 50%
       right: 5%
-      color: #3AEDC2
+      color: #2ADDB2
+      //#3AEDC2
 
     #login:hover
       cursor: pointer
@@ -266,7 +267,7 @@ body
   .input-area
     border-radius: 3vh
     height: 3vw
-    //font-size: 1.3vw
+    font-size: 1.2vw
     outline: none
     text-indent: 1em
     padding: 5px 0px 5px 0px
@@ -327,7 +328,8 @@ body
       transform: translate(0, -50%)
       top: 50%
       right: 5%
-      color: #3AEDC2
+      color: #2ADDB2
+      //#3AEDC2
 
     #sign-up:hover
       cursor: pointer
