--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -241,7 +241,7 @@ a
         width: 3.2vw
         height: 3.2vw
         border-radius: 50%
-        border: grey solid 0.05vw
+        border: #BBBBBB solid 0.07vw
         margin-top: 0.5vw
       .vitualimg
         width: 3.2vw
@@ -264,7 +264,7 @@ a
       z-index: 0
       
       .tag
-        width: 20%
+        width: calc(100% / 3)
         height: 100%
         background-color: white
         opacity: 1
@@ -292,11 +292,12 @@ a
       justify-content: space-around
       z-index: 2
       *
-        width: 15%
+        //width: 15%
         z-index: 1
         font-size: 1.3vw
         border: none
         background-color: transparent
+        padding: 0 calc(13vw / 3)
       *:hover
         position: relative
         transform: scale(1.02)
@@ -394,7 +395,7 @@ a
           //background-image: linear-gradient(#EEEEEE, #FFFFFF)
           //border-radius: 1.5vw
           width: 100%
-          height: 15vw
+          height: 10vw
           overflow: scroll
           //overflow-scrolling: touch
           //-webkit-overflow-scrolling: touch
