--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -22,6 +22,8 @@
   --font-family-card: "jf-openhuninn", "Tahoma", "Arial"
   --font-style-card: normal
 
+
+
 #navbar
   display: flex
   flex-direction: row
@@ -35,7 +37,29 @@
   background-color: var(--color-main)
 
   /*UpLeft/UR/DR/DL
-  z-index: 1
+  z-index: 6
+  
+  #loadingfilter
+    display: block
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+    -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+    z-index: 6
+    
+  #loadinggif
+    display: block
+    position: fixed
+    transform: translate(-50%, -50%)
+    top: 45%
+    left: 50%
+    width: 7vw
+    height: 7vw
+    content: url("../file/connectloading.gif")
+    z-index: 7
 
 a
   margin-left: 3%
@@ -123,6 +147,10 @@ a
       background-image: url('../file/noticeicon.png')
     #message
       background-image: url('../file/msgicon.png')
+    #aboutus
+      background-image: url('../file/groupicon.png')
+      width: 1.7vw
+      height: 1.7vw
     #profile
       background-image: url('../file/personalinfoicon.png')
     #logout
