disable loading filter

--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -4,9 +4,8 @@
 link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")  
 header
   #navbar
-    #loadingfilter
-    {% load static %}
-    img#loadinggif
+    //#loadingfilter
+    //img#loadinggif
   
   
     a(href="{% url 'home' %}")
