--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -174,7 +174,7 @@ body
     border: 0
     margin: 0.5vw 0.5vw 0
   
-  #err-msg
+  .err-msg
     font-size: 1.2vw
     text-align: center
     color: #FF7575
