modify profile page scroll bar

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -397,6 +397,7 @@ a
           width: 100%
           height: 10vw
           overflow: scroll
+          overflow-x: hidden
           //overflow-scrolling: touch
           //-webkit-overflow-scrolling: touch
           //appearance: none
