fix event create button

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -710,17 +710,18 @@ a
     width: 5vw
     left: 50%
     right: 3.2vw
-    bottom: 2vw
+    bottom: 1.5vw
     #submit-btn
       width: 100%
       background: none
       height: auto
-      font-size: 1.7vw
+      font-size: 1.5vw
       background-color: #32DEB5
       border-radius: 2vw
-      padding: 0.5vw 1vw
+      padding: 0.5vw 0vw
       text-align: center
       margin-top: 2vw
+      border: #32DEB5 solid 2px
     #submit-btn:hover
       background-color: #9FE4D4
 
