--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -19,7 +19,36 @@ header
         //a#event.button(href="{{ home_url }}")
         a#feedback.button(href="https://forms.gle/jg1putGAWZntSeNPA" title="問題回報")
       li 
-        a#alert.button(href="#" title="功能開發中")
+        a#alert.button(href="#" title="通知")
+        #notificationboard
+          p#noticeheading 通知
+          #notices
+            
+            .notion 1
+            .notion 2
+            .notion 3
+            .notion 4
+            .notion 5
+            .notion 1
+            .notion 2
+            .notion 3
+            .notion 4
+            .notion 5
+            .notion 1
+            .notion 2
+            .notion 3
+            .notion 4
+            .notion 5
+            .notion 1
+            .notion 2
+            .notion 3
+            .notion 4
+            .notion 5
+            .notion 1
+            .notion 2
+            .notion 3
+            .notion 4
+            .notion 5
       li 
         a#message.button(href="#" title="功能開發中")
       li
