--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -18,37 +18,29 @@ header
       li 
         //a#event.button(href="{{ home_url }}")
         a#feedback.button(href="https://forms.gle/jg1putGAWZntSeNPA" title="問題回報")
-      li 
-        a#alert.button(href="#" title="通知")
+      li
+        a#alert.button(title="通知")
         #notificationboard
           p#noticeheading 通知
           #notices
+            {% for noticedata in notice %}
+            .notice
+              
+              a(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}")
+                img#noticesenderpic(src="{{ noticedata.from_user.userextend.img.url }}")
+              #notice-right
+                #notion-righttop
+                  a#noticesendername(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}") {{ noticedata.from_user.userextend.full_name }}
+                  //p#notice-detail {{ noticedata.text }}
+                  p 對
+                  a#noticeevent(href="{% url 'event_detail' id=noticedata.event.pk %}") {{ noticedata.event }}
+                  p 有興趣
+                #notion-rightbottom
+                  p#notice-date {{ noticedata.date }}
             
-            .notion 1
-            .notion 2
-            .notion 3
-            .notion 4
-            .notion 5
-            .notion 1
-            .notion 2
-            .notion 3
-            .notion 4
-            .notion 5
-            .notion 1
-            .notion 2
-            .notion 3
-            .notion 4
-            .notion 5
-            .notion 1
-            .notion 2
-            .notion 3
-            .notion 4
-            .notion 5
-            .notion 1
-            .notion 2
-            .notion 3
-            .notion 4
-            .notion 5
+            {% empty %}
+            .notion(style=) 目前沒有通知喔～
+            {% endfor %}
       li 
         a#message.button(href="#" title="功能開發中")
       li
