--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -109,20 +109,18 @@ a
     padding-top: 1%
     padding-bottom: 3%
 
-#flex-column
-  display: flex
-  flex-direction: column
-  margin: 0 10% 0 10%
-
-.flex-row
+#cards
   display: flex
   flex-direction: row
-  justify-content: center
+  margin: 0 13% 5% 13%
   flex-wrap: wrap
+  align-content: flex-start
+  justify-content: center
+  align-items: flex-start
+  
 
-  /*gap: 3%;
-  margin: 1.5% 0 1.5% 0
-
+a
+  margin: 0
 .card
   position: relative
   background-color: #F5F5F5
@@ -134,7 +132,7 @@ a
   border-radius: 1.5vw
   opacity: 1
   z-index: 2
-  margin-right: 3%
+  margin: 1.5vw
 
 .card-bg
   position: absolute
@@ -201,7 +199,7 @@ a
 @media only screen and (max-width: 1024px)
   /* display on phone
   #group-img
-    top: 5.2vw
+    top: -5vw
 
   #slogan
     margin: 0 14vw
