--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -41,6 +41,13 @@
   /*UpLeft/UR/DR/DL
   z-index: 6
   
+  #clickfilter
+    display: none
+    position: fixed
+    width: 100%
+    height: 100%
+    z-index: -1
+  
   #loadingfilter
     display: block
     position: fixed
@@ -161,14 +168,14 @@ a
       
     #notificationboard
       display: none
-      margin: 0.5vw 0 0 -1vw
+      margin: 0.5vh 0 0 -1vw
       padding: 1vw
     
       position: relative
       height: 0vh
-      width: 24vw
+      width: 22vw
       top: 0
-      right: 12vw
+      right: 8vw
       background-color: #FAFAFA
       opacity: 0.95
       
@@ -186,7 +193,7 @@ a
         align-items: stretch
         
         overflow: scroll
-        height: 48.5vh
+        height: 40vh
         
         z-index: 0
         
@@ -235,7 +242,7 @@ a
                 font-size: 1vw
                 color: #333333
                 line-height: 1.2vw
-                margin: 0 0.35vw
+                margin: 0 0.2vw
               
               #noticesendername
                 font-size: 1.2vw
@@ -245,7 +252,7 @@ a
               #noticeevent
                 font-size: 1.2vw
                 font-weight: 600
-                width: 8vw
+                width: 7.2vw
                 //max-width: 8vw
                 overflow: hidden
                 white-space: nowrap
