--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -21,23 +21,25 @@ html
       p#slogan 我們是一群由成功大學電機系、工設系、不分系和外文系的學生所組成的一個團隊，目標是在這學期結束前架構出一個專門為大學生設計的社群網站 - CONNECT，讓大學生們可以在學校裡更容易找到志同道合的夥伴共事
       #gap2 
 
-      #flex-column
-        .flex-row
+      #cards
+        a(href="{% url 'profile' id=2 %}")
           .card
             img.personal_pic(src="{% static 'file/name1_2.png'%}")
             .card-bg
-            .card-detail 
+            .card-detail
               p.personal-name 張仲喆
               p.description 工程師
               .hidden-description(style = "display: none")
                 p.description 技能：c, c++, lr
                 p.description 系所：電機系111
                 p.description 興趣：攝影, 打桌球, 打code, 彈吉他
-          
+        
+        
+        a(href="{% url 'profile' id=7 %}")
           .card
             img.personal_pic(src="{% static 'file/name2_2.png'%}")
             .card-bg
-            .card-detail 
+            .card-detail
               p.personal-name 蔡孟芩
               p.description 設計師
               .hidden-description(style = "display: none")
@@ -45,10 +47,12 @@ html
                 p.description 系所：外文系110
                 p.description 興趣：學習語言, 寫詞編曲, 烘焙
 
+        
+        a(href="{% url 'profile' id=1 %}")
           .card
             img.personal_pic(src="{% static 'file/name3_2.png'%}")
             .card-bg
-            .card-detail 
+            .card-detail
               p.personal-name 陳亮州
               p.description 工程師
               .hidden-description(style = "display: none")
@@ -56,22 +60,24 @@ html
                 p.description 系所：電機系111
                 p.description 興趣：聽音樂, 看電影, 打code
 
+        
+        a(href="#")
           .card
             img.personal_pic(src="{% static 'file/name4_2.png'%}")
             .card-bg
-            .card-detail 
+            .card-detail
               p.personal-name 鄭有希
               p.description 設計師
               .hidden-description(style = "display: none")
                 p.description 技能：ps, ai, pr, solidworks
                 p.description 系所：工設110
                 p.description 興趣：看小說, 打排球, 彈吉他
-
-        .flex-row
+        
+        a(href="{% url 'profile' id=4 %}")
           .card
             img.personal_pic(src="{% static 'file/name5_2.png'%}")
             .card-bg
-            .card-detail 
+            .card-detail
               p.personal-name 鄭价閎
               p.description 工程師
               .hidden-description(style = "display: none")
@@ -79,10 +85,12 @@ html
                 p.description 系所：電機系111
                 p.description 興趣：球類, 手遊, 漫畫, 魔方
 
+        
+        a(href="{% url 'profile' id=8 %}")
           .card
             img.personal_pic(src="{% static 'file/name6_2.png'%}")
             .card-bg
-            .card-detail 
+            .card-detail
               p.personal-name 蕭孟恩
               p.description 設計師
               .hidden-description(style = "display: none")
@@ -90,10 +98,12 @@ html
                 p.description 系所：不分系110
                 p.description 興趣：科幻電影, 獨立音樂
 
+        
+        a(href="{% url 'profile' id=3 %}")
           .card
             img.personal_pic(src="{% static 'file/name7_2.png'%}")
             .card-bg
-            .card-detail 
+            .card-detail
               p.personal-name 林雯琪
               p.description 工程師
               .hidden-description(style = "display: none")
