clear database for adding board message backend support

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -121,7 +121,7 @@ html
 
         #buttons
           //input#submit-btn(type="image" src="{% static 'file/submitbtn.png' %}" alt="Submit Form")
-          input#submit-btn(type="button" alt="Submit Form" value='發佈')
+          input#submit-btn(type="submit" value='發佈')
           //p#submit-btn 發佈
     {% endif %}
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
