fix signup error msg, modify login signup account title to 帳號、學號

--- a/templates/login.pug
+++ b/templates/login.pug
@@ -21,7 +21,7 @@ html
           hr.solid
           p.input-description 使用者帳號
           label(for='username')
-          input#username.input-area(type="text", name='username', placeholder="帳號")
+          input#username.input-area(type="text", name='username', placeholder="學號、帳號")
           p.input-description 使用者密碼 
           label(for='password')
           input#password.input-area(type="password", name='password', placeholder="密碼")
@@ -41,7 +41,7 @@ html
           label(for='lname')
           input#lname.input-area(type="text", name='lname', placeholder="大名")
           label(for='sid')
-          input#sid.input-area(type="text", name='sid', placeholder="學號")
+          input#sid.input-area(type="text", name='sid', placeholder="學號、帳號")
           label(for='email')
           input#email.input-area(type="email", name='email', placeholder="信箱")
           label(for='sign-pwd')
