--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -183,6 +183,8 @@ body
   #term-div
     display: flex
     flex-direction: row
+    align-items: center
+    flex-wrap: nowrap
     label
       margin-top: 0.7vw
       margin-left: 0.8vw
