--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -110,6 +110,7 @@ a
           display: flex
           flex-direction: row
           margin-bottom: 5%
+          color: #555555
           #department
             font-size: 1.2vw
             margin-right: 0.5vw
