--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -49,11 +49,19 @@ header
         a#message.button(href="#" title="功能開發中")
       li
         a#aboutus.button(href="/about_us" title="about us")
-      li 
-        {% if request.user.is_authenticated %}
-        //a#profile.button(href="{% url 'profile' id=request.user.userextend.pk %}")
+        
+      {% if request.user.is_authenticated %}
+      
+      {% if request.user.is_authenticated and request.user.pk == user.user.pk %}
+      li
         a#logout.button(href="/logout/" title="登出")
-        {% else %}
+      {% else %}
+      li
+        a#profile.button(href="{% url 'profile' id=request.user.userextend.pk %}")
+      {% endif %}
+      
+      {% else %}
+      li
         a#profile.button(href="{% url 'login' %}" title="登入")
-        {% endif %}
-        //a.button(href="javascript:window.location.reload({{ about_us_url }})") about us
+      {% endif %}
+      //a.button(href="javascript:window.location.reload({{ about_us_url }})") about us
